--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>My BPA</title>
+    <link rel="stylesheet" type="text/css" href="origstyle.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
+
+<body>
   <h1>hello</h1>
+  </body>
 </html>
